.k8s/deploy.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: technical-task-d8d023e3-28cb-4b2e-a6c3-04cbe805f482
  name: technical-task-d8d023e3-28cb-4b2e-a6c3-04cbe805f482
spec:
  replicas: 1
  selector:
    app: technical-task-d8d023e3-28cb-4b2e-a6c3-04cbe805f482
  template:
    metadata:
      labels:
        app: technical-task-d8d023e3-28cb-4b2e-a6c3-04cbe805f482
    spec:
      containers:
        - name: app
          image: "ghcr.io/tenhishadow/technical-task-d8d023e3-28cb-4b2e-a6c3-04cbe805f482:fe444251b1e0428c42ebb57c0c89cf71ffefc9a0"
          resources:
            requests:
              cpu:    "100m"
              memory: "128Mi"
            limits:
              cpu:    "250m"
              memory: "512Mi"

...
