.k8s/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: technical-task-d8d023e3-28cb-4b2e-a6c3-04cbe805f482
  name: technical-task-d8d023e3-28cb-4b2e-a6c3-04cbe805f482
  namespace: technical-task-d8d023e3-28cb-4b2e-a6c3-04cbe805f482
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: app
  selector:
    app: technical-task-d8d023e3-28cb-4b2e-a6c3-04cbe805f482
...
